--- a/prometheus.yml
+++ b/prometheus.yml
@@ -12,4 +12,4 @@ scrape_configs:
 
   - job_name: 'ai-mini1'
     static_configs:
-      - targets: ['base:8000']
+      - targets: ['172.17.0.3:8000']
